@@ -3,7 +3,7 @@ AUX tiff-3.8.2-tiffsplit.patch 646 RMD160 14633a8b89b71f6c9aa027c25233854331d863
 AUX tiff-jbig.patch 14636 RMD160 88f8069cda0e1a897961e2c69e6b787a7776124d SHA1 293c174bd1137c63a85dbfc761616752d2f3644f SHA256 73e70f6cf3e63abfd7b5569e2aae0a6811020c883065dfc36d563ca2e547ccd1
 DIST tiff-3.8.2-tiff2pdf.patch.bz2 8469 RMD160 735c468464fcd4662ac571ae4a92ae1e20a4736e SHA1 c121f0ba43cde1eb9b667ae55b9cab94f1fb83ff SHA256 1811b0ea3a7e1b09b398731a60aded50cea48a80347b3196fdbfe75cf9e878b9
 DIST tiff-3.8.2.tar.gz 1336295 RMD160 1b4d825e3be08764e953fc58246d0c25ab4dd17d SHA1 549e67b6a15b42bfcd72fe17cda7c9a198a393eb SHA256 be88f037080b93ce0a337b2b3ca5e8195f76885deb6c558cc3aa872ee848fc76
-EBUILD tiff-3.8.2-r2.ebuild 1702 RMD160 54f661a48f79040530da6c44603652db1abbf4e6 SHA1 0c704f70dd3ce8f8bcd62396223307d76a414c36 SHA256 7cbad60c28fc7c26bf7197b50254435c22b39729ee0ef1178ede018571e6b663
-EBUILD tiff-3.8.2-r3.ebuild 1757 RMD160 7d61f1110badfe863f10b8cfb2b42de952a1c08d SHA1 1f84961b9c7089712bda4372d734d06dc9a5e03a SHA256 573255f655bc272f656ffa3272a171513b7a3ebdcc8facdb4d1539352d7cb4a5
-MISC ChangeLog 13607 RMD160 1bb2dc4a2d51fbded79c29774cbddc8caaf10d73 SHA1 a046f9a4348fdf407f11bca9b3acad1ae6580e69 SHA256 6c6f8bc08999088c3ec635fc2893a45703d7a57bca96e10765a61dbddcf16f30
+EBUILD tiff-3.8.2-r2.ebuild 1714 RMD160 e630d401bad8b546c04a69e3e4f0af8739de59fa SHA1 9ff9ac449a649a16a09118e1ea666e61d3d0bdfe SHA256 dad2702c2a87a37f899e66e36a811d1ac339403c8418f64a9be376475bd7099a
+EBUILD tiff-3.8.2-r3.ebuild 1766 RMD160 8cb01567cc60eaa6933065ed98deefb750ec3dd4 SHA1 fe149ecbf9e27dc1ca9dda553d09d3e2f7f49fa0 SHA256 7e4ef49e36a36968a9364881fcba7aa7132adb5c85f3660ec34bf203e174319d
+MISC ChangeLog 13920 RMD160 74f9b71816121aeddcb94bbd1d902d792ddc0dab SHA1 e71efd5ed4b2a108af5da20ce962a1db1a954323 SHA256 2ec4f1c8cb204382da5039b0537e62243f272d8b923fa0b352aed995f48f5e06
 MISC metadata.xml 447 RMD160 8df7883ab02a353acd993037450e7bbc984c052d SHA1 8ffef6a88ae70afbdea7f3be25e1e9a28b6698c5 SHA256 ee7391b2521ef9676ead67466ad7249f05f8d3c9bd8d8984bc0ceac8dcb804b3
